# GELnet

./: README.md  algorithm.py  pyproject.toml
src/gelnet/: __init__.py  algorithm.py  solver.py
tests/: test_gelnet.py
